# magic-rust-activity-backend

./: .dockerinit.sh  .env.example  .gitignore  Dockerfile  Makefile  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/workflows/: build_docker.yml  deploy_prod.yml
app/: app.py  config.py  consume.py  dependencies.py  entrypoints.py  tasks.py
app/api/: router.py
app/api/v1/: router.py
app/api/v1/activity/: api.py
app/api/v1/tickets/: api.py  payloads.py
app/api/v1/voice_records/: api.py  models.py
app/db/: connection.py
app/repositories/: activity_session.py  tickets_history.py  voices_records.py
app/services/: handle_activity_queue.py  make_ticket_history_file_url.py  send_tickets_history.py
app/services/voices_records/: audio_merge.py  craig_download.py  craig_info_parser.py  errors.py  start_craig_transcribe.py  tasks.py  transcript.py
app/structs/: activity_message.py  activity_session.py  enums.py  ticket_history.py
app/structs/voices_records/: __init__.py  voice.py
core/: base_repositories.py  consumer.py  defaults.py  logger.py
core/api_clients/: magic_rust_stats.py
core/api_clients/craig_bot/: __init__.py  api.py  models.py
